# todoisto

./: .dockerignore  .env  .env.dev  .env.example  .env_example  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: action.yaml  docker-image.yml
backend/: .env.dev  Dockerfile  docker-compose-ci.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  entrypoint.prod.sh
backend/bot/: admin.py  models.py  serializers.py  urls.py  views.py
backend/bot/migrations/: 0001_initial.py
backend/bot/tg/: client.py  models.py
backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_email_and_more.py  0003_alter_user_email_alter_user_first_name_and_more.py
backend/goals/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/goals/migrations/: 0001_initial.py  0002_goal.py  0002_goalcomment.py  0003_alter_goal_created_alter_goal_updated_and_more.py  (+2 more)
backend/tests/: factories.py  fixtures.py
backend/tests/core/: profile_test.py  (+2 more)
backend/todoisto/: asgi.py  settings.py  urls.py
deploy/: .env_example  docker-compose.yaml  nginx.conf
postgres/: docker-compose.yaml
test/: factories.py  fixtures.py  wsgi.py
test/core/: profile_test.py  user_create_test.py  user_login_test.py
test/goals/: board_test.py  categories_test.py  comment_test.py
todoisto/: asgi.py  settings.py  urls.py  wsgi.py
(+6 files in other folders)
