[tool.poetry]
name = "todoisto"
version = "0.1.0"
description = ""
authors = ["zamotaev.v-a@yandex.ru <zamotaev.v-a@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"
flake8 = "^6.0.0"
django-cors-headers = "^3.13.0"
social-auth-app-django = "^5.0.0"
django-environ = "^0.9.0"
python-dotenv = "^0.21.0"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
